--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,18 @@
         android:text="-"
         android:textAllCaps="true"/>
 
+    <TextView
+        android:id="@+id/price_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:text="$0" />
+
+
+
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
