--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:text="+"
-        android:textAllCaps="true"/>
+        android:textAllCaps="true"
+        android:onClick="increment"/>
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
@@ -35,6 +36,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:text="-"
+        android:onClick="decrement"
         android:textAllCaps="true"/>
 
     <TextView
@@ -45,8 +47,6 @@
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:text="$0" />
-
-
 
 
     <Button
