--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,12 @@
             android:onClick="increment"
             android:text="+"
             android:textAllCaps="true" />
-
-
     </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You have selected "  />
 
     <TextView
         android:layout_width="wrap_content"
